--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,4 @@ platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = pico
 framework = arduino
 board_build.core = earlephilhower
+lib_deps = robtillaart/INA226@^0.6.1
