--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,11 +12,11 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "D:/Documents/Documents/Platformio/Projects/pico-sensor-interface/.pio/build/pico/firmware.elf",
+            "executable": "C:/Users/vanderwt/OneDrive - Scion/Documents/PROJECTS/Cetogenix/Reactor Upgrades/pico-sensor-interface/.pio/build/pico/firmware.elf",
             "projectEnvName": "pico",
-            "toolchainBinDir": "C:/Users/PeakeJe/.platformio/packages/toolchain-rp2040-earlephilhower/bin",
+            "toolchainBinDir": "C:/Users/vanderwt/.platformio/packages/toolchain-rp2040-earlephilhower/bin",
             "internalConsoleOptions": "openOnSessionStart",
-            "svdPath": "C:/Users/PeakeJe/.platformio/platforms/raspberrypi@src-ff76a3915224135aafad379817f41edd/misc/svd/rp2040.svd",
+            "svdPath": "C:/Users/vanderwt/.platformio/platforms/raspberrypi/misc/svd/rp2040.svd",
             "preLaunchTask": {
                 "type": "PlatformIO",
                 "task": "Pre-Debug"
@@ -26,21 +26,21 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "D:/Documents/Documents/Platformio/Projects/pico-sensor-interface/.pio/build/pico/firmware.elf",
+            "executable": "C:/Users/vanderwt/OneDrive - Scion/Documents/PROJECTS/Cetogenix/Reactor Upgrades/pico-sensor-interface/.pio/build/pico/firmware.elf",
             "projectEnvName": "pico",
-            "toolchainBinDir": "C:/Users/PeakeJe/.platformio/packages/toolchain-rp2040-earlephilhower/bin",
+            "toolchainBinDir": "C:/Users/vanderwt/.platformio/packages/toolchain-rp2040-earlephilhower/bin",
             "internalConsoleOptions": "openOnSessionStart",
-            "svdPath": "C:/Users/PeakeJe/.platformio/platforms/raspberrypi@src-ff76a3915224135aafad379817f41edd/misc/svd/rp2040.svd"
+            "svdPath": "C:/Users/vanderwt/.platformio/platforms/raspberrypi/misc/svd/rp2040.svd"
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "D:/Documents/Documents/Platformio/Projects/pico-sensor-interface/.pio/build/pico/firmware.elf",
+            "executable": "C:/Users/vanderwt/OneDrive - Scion/Documents/PROJECTS/Cetogenix/Reactor Upgrades/pico-sensor-interface/.pio/build/pico/firmware.elf",
             "projectEnvName": "pico",
-            "toolchainBinDir": "C:/Users/PeakeJe/.platformio/packages/toolchain-rp2040-earlephilhower/bin",
+            "toolchainBinDir": "C:/Users/vanderwt/.platformio/packages/toolchain-rp2040-earlephilhower/bin",
             "internalConsoleOptions": "openOnSessionStart",
-            "svdPath": "C:/Users/PeakeJe/.platformio/platforms/raspberrypi@src-ff76a3915224135aafad379817f41edd/misc/svd/rp2040.svd",
+            "svdPath": "C:/Users/vanderwt/.platformio/platforms/raspberrypi/misc/svd/rp2040.svd",
             "loadMode": "manual"
         }
     ]
